samples/_failures_safe/1761500818_e74bc1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f69098e2.c: In function ‘tokenize’:
./samples/SAFE/__tmp_f69098e2.c:167:5: error: expected expression at end of input
  167 |     if (input == NULL || tokens == NULL || max_tokens <=
      |     ^~
./samples/SAFE/__tmp_f69098e2.c:167:5: error: expected declaration or statement at end of input
